# bank-api

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20201119175855_create-tables.sql
src/: main.rs
src/config/: crypto.rs  mod.rs  params.rs
src/db/: mod.rs  trans.rs  user.rs
src/errors/: mod.rs
src/handlers/: auth.rs  bank.rs  mod.rs  user.rs
src/models/: mod.rs  trans.rs  user.rs
