[package]
name = "bank-api"
version = "0.1.0"
authors = ["rafaelkonrath <rafael.konrath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
dotenv = "0.15"
actix-web = "3.2"
actix-rt = "1.1"
actix-identity = "0.3"
actix-web-httpauth = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", features = ["compat"] }
argonautica = { version = "0.2", features = ["simd"] }
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "json" ] }
color-eyre = "0.5"
eyre = "0.6"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.1.1"
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7.2"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
tokio = { version = "0.2.4", features = ["full"] }